# calculator-api-python

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  calculator.py  main.py
tests/: __init__.py  conftest.py  test_api.py  test_calculator.py  test_injection.py
tests/helpers/: __init__.py  http.py
